2010-06-25  Zhenyao Mo  <zmo@google.com>

Reviewed by Dimitri Glazkov.

        getUniform will not work for fetching uniform array elements
        https://bugs.webkit.org/show_bug.cgi?id=34508

        * fast/canvas/webgl/gl-uniform-arrays-expected.txt: Added.
        * fast/canvas/webgl/gl-uniform-arrays.html: Added.
        * fast/canvas/webgl/incorrect-context-object-behaviour-expected.txt: Change the test so we test the return error explicitly.
        * fast/canvas/webgl/script-tests/incorrect-context-object-behaviour.js: Ditto.
2010-06-25  Zhenyao Mo  <zmo@google.com>

        Reviewed by Dimitri Glazkov.

        getUniform will not work for fetching uniform array elements
        https://bugs.webkit.org/show_bug.cgi?id=34508

        Test: fast/canvas/webgl/gl-uniform-arrays.html

        * html/canvas/WebGLRenderingContext.cpp:
        (WebCore::WebGLRenderingContext::attachShader): Generate correct errors.
        (WebCore::WebGLRenderingContext::getUniform): Dealing with array elements.
        (WebCore::WebGLRenderingContext::useProgram): Deal with program==null.
        (WebCore::WebGLRenderingContext::validateProgram): Generate correct errors.
        * platform/graphics/mac/GraphicsContext3DMac.mm:
        (WebCore::GraphicsContext3D::useProgram): Deal with program==null.

Canonical link: https://commits.webkit.org/52919@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61939 268f45cc-cd09-0410-ab3c-d52691b4dbfc